fixed button alignment

--- a/_sass/landing.scss
+++ b/_sass/landing.scss
@@ -51,7 +51,7 @@
             display: inline-block;
             margin-right: 5px;
             position: relative;
-            top:5px;
+            top:-3px;
         }
         .fab-like{
             display: inline-block;
